@@ -4,6 +4,9 @@
 
   * src/cmd/cmd_debug.c: Add a completion handler.
 
+  * src/global/parse.c (urj_parse_stream): Do not call "quit" when we hit the
+    end of a stream.  Simply return success so we can handle nested cases.
+
 2011-02-21  Mike Frysinger  <vapier@gentoo.org>
 
   * data/Makefile.am (nobase_dist_pkgdata_DATA): Add missing analog/bfin/bfin.
